--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portfólio</title>
     <link rel = "shortcut icon" href="#" type ="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel = "stylesheet" href="/Css/style.css">
+    <link rel = "stylesheet" href="Css/style.css">
 </head>
 <body>
     <!-- cabeçalho -->
