--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="inicio-img">
-            <img src="/imagens/Imagem_10.jpg" alt="Imagem_10">
+            <img src="imagens/Imagem_10.jpg" alt="Imagem_10">
         </div>
     </section>    
 
@@ -49,17 +49,17 @@
         
         <div class="sobre-mim-container">
             <div class="sobre-mim-box">
-                <img src="/imagens/Imagem_4.jpg" alt="Imagem_4">
+                <img src="imagens/Imagem_4.jpg" alt="Imagem_4">
                     <p>Toco violão a 20 anos e sou apaixonada pelo meu instrumento</p>
             </div>
 
             <div class="sobre-mim-box">
-                <img src="/imagens/Imagem_5.jpeg" alt="Imagem_4">
+                <img src="imagens/Imagem_5.jpeg" alt="Imagem_4">
                     <p>Toco teclado a pouco menos de 2 anos e ele tambem se tornou um instrumento que amo muito</p>
             </div>
 
             <div class="sobre-mim-box">
-                <img src="/imagens/Imagem_11.jpg" alt="Imagem_4">
+                <img src="imagens/Imagem_11.jpg" alt="Imagem_4">
                     <p>Amo Pets, especialmente meu gatinho Fred</p>
             </div>
         </div>
@@ -82,7 +82,7 @@
 
             <div class="portfolio-container">
                 <div class="portfolio-box">
-                    <img src="/imagens/image_12.png">
+                    <img src="imagens/image_12.png">
                         <div class="portfolio-layer">
                             <h4>Jornada de Trabalho</h4>
 
