--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         
         <div class="sobre-mim-container">
             <div class="sobre-mim-box">
-                <img src="imagens/Imagem_4.jpg" alt="Imagem_4">
+                <img src="imagens/Imagem_4.JPG" alt="Imagem_4">
                     <p>Toco violão a 20 anos e sou apaixonada pelo meu instrumento</p>
             </div>
 
