--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <p>Bem-vindo ao meu portfólio! Neste espaço, compartilho um pouco sobre meus hobbies e o meu ambiente profissional,Espero que aproveite a visita!
             </p>
             <div class="social-midia">
-                <a href="#"><i class='bx bxl-facebook'></i></a>
-                <a href="#"><i class='bx bxl-instagram'></i></i></a>
-                <a href="#"><i class='bx bxl-linkedin'></i></i></a>
+<!--                 <a href="##"><i class='bx bxl-facebook'></i></a> -->
+                <a href="https://www.instagram.com/eularigaldino/?next=%2F" target="_blank"><i class='bx bxl-instagram'></i></i></a>
+                <a href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_nav-header-signin"target="_blank"><i class='bx bxl-linkedin'></i></i></a>
             </div>
         </div>
         <div class="inicio-img">
