--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </p>
             <div class="social-midia">
                 <a href="https://www.instagram.com/eularigaldino/?next=%2F" target="_blank"><i class='bx bxl-instagram'></i></i></a>
-                <a href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_nav-header-signin"target="_blank"><i class='bx bxl-linkedin'></i></i></a>
+                <a href="https://www.linkedin.com/in/larissa-galdino-a6b40620a/"target="_blank"><i class='bx bxl-linkedin'></i></i></a>
             </div>
         </div>
         <div class="inicio-img">
@@ -91,7 +91,7 @@
                                 Minha trajetória reflete meu comprometimento e a busca constante por crescimento. Pretendo continuar me desenvolvendo e contribuir ainda mais para o sucesso da empresa, avançando em novos desafios e oportunidades.
                             </p>
 
-                            <a href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_nav-header-signin"target="_blank"><i class='bx bx-link-external' ></i></a>
+                            <a href="https://www.linkedin.com/in/larissa-galdino-a6b40620a/"target="_blank"><i class='bx bx-link-external' ></i></a>
                         </div>
                 </div>
             </div>
